style added to button

--- a/testing-app/src/components/UI/Button.module.css
+++ b/testing-app/src/components/UI/Button.module.css
@@ -1,3 +1,12 @@
+.my-btn {
+  transition: 0.2s all ease-in-out;
+  border-radius: 6px;
+  background-color: transparent;
+  border: 1px block solid;
+  text-transform: uppercase;
+}
+
 .my-btn:hover {
-  background-color: lightgrey;
+  border: 1px rgb(222, 48, 48) solid;
+  color: red;
 }
